--- a/AppointmentApplication/src/main/resources/templates/createAppointment.html
+++ b/AppointmentApplication/src/main/resources/templates/createAppointment.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- <link rel="stylesheet" href="css/site.css"/> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
     <title>Your appointments</title>
@@ -17,7 +19,7 @@
   		<div class ="collapse navbar-collapse" id="navbarMenu">
 	  		<ul class="navbar-nav"> <!--  navbar wrapper around all the items of the list -->
 	  			<li class = "nav-item">	<!--  single list item -->
-	  				<a href="/createAppointment" class ="nav-link">Create a new appointment</a>
+	  				<a href="#" class ="nav-link">Create a new appointment</a>
 	  			</li>
 	  			<li class = "nav-item">	<!--  single list item -->
 	  				<a href="#" class ="nav-link">Delete an existing appointment</a>
@@ -32,23 +34,34 @@
   		</div>
   	</nav>
 
-    <h1> In belows table, you can see all your appointments</h1>
-    <table class="table table-striped">
-  		<thead>
-    		<tr>
-		      <th scope="col">Appointment ID</th>
-		      <th scope="col">Date</th>
-		      <th scope="col">Description</th>
-		    </tr>
-	  	</thead>
-	  	<tbody>
-	    	<tr th:each="appointment: ${myAppointments}">
-				<td th:text="${appointment.appointmentID}">Appointment ID</td>
-		    	<td th:text="${appointment.date}">Date</td>
-		    	<td th:text="${appointment.description}">Description</td>
-	    	</tr>
-	    </tbody>
-	</table>
+	<h2>Please fill in the forms and confirm to create a new appointment</h2>
+<form method="post" action="#" th:action="@{/createAppointment}" th:object="${appointment}">
+  <div class="form-group">
+    <label for="dateInput">Date</label>
+    <input type="text" th:field="*{date}" class="form-control" id="dateInput" aria-describedby="dateHelp" placeholder="Enter date">
+    <small id="dateHelp" class="form-text text-muted">The Date of your appointment you want to create.</small>
+  </div>
+  <div class="form-group">
+    <label for="descriptionInput">Description</label>
+    <input type="text" th:field="*{description}" class="form-control" id="descriptionInput" placeholder="Description">
+  </div>
+  <div class="form-group">
+    <label for="cityInput">City</label>
+    <input type="text" th:field="*{city}" class="form-control" id="cityInput" placeholder="City">
+  </div>
+  <div class="form-row">
+	  <div class="form-group col-md-4">
+	    <label for="streetInput">Street</label>
+	    <input type="text" th:field="*{street}" class="form-control" id="streetInput" placeholder="Street">
+	  </div>
+	  <div class="form-group col-md-6">
+	    <label for="streetNumberInput">Street Nr</label>
+	    <input type="text" th:field="*{streetNumber}" class="form-control" id="streetNumberInput" placeholder="Number">
+	  </div>
+	  
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
     
     
     
